Tests/Negative/DuplicateFunInMod.mr
mod M {
    pub fun test() {}
    pub fun test(x: i32) {} // Redefinition
}
